--- a/report/draft.tex
+++ b/report/draft.tex
@@ -44,6 +44,7 @@
 	\input{text/systemOverviewDesign.tex}
 	\input{text/database.tex}
 	\input{text/api.tex}
+	\input{text/ArduinoDesign.tex}
 	\input{text/websiteImplementationAndDesign.tex}
 
 	%Part Perspective
