--- a/report/text/ArduinoDesign.tex
+++ b/report/text/ArduinoDesign.tex
@@ -6,33 +6,26 @@ There is two devises need to activete a usage of device from the user to the ser
 One is a small detection device to read user tags when swiped over it, this devise is often placed in the most asseble place. 
 The other devise is a powercontrol devise whitch i located on the powerline to the media device and tunes on and off the electrisity when needed.
 The powercontrol devise is the brain of the two devises and is therefore to moniter the users time usage and communication center with the server and detection devise. 
-The detection devise also work as infomation communicater to the user ion the state of the connection to the server, acceptens/decline of login and more.     
+The detection devise also work as infomation communicater to the user on the state of the connection to the server, acceptens/decline of login and more.     
 
 \begin{figure}
 	\centering
 		\includegraphics{}
 \end{figure}
 
+\subsection{Senario Design}
+
 The standard user senario:
 The tag dectector reads the identification tag when the user swip it on the device and sends the information to the powercontorl device with a low frequency connection.
-The powercontrol device translate the swip to a command that is send to the server with the devise id and tag id. The server will respond, if the user is allowed to use the media then the powercontroler turn on the powersupplie else it dosn't in both cases it gives the information to the tag detector to confirm/decline the logon to the user though it's indications lights visa versa for logging off the system(light indications is descriped in table XXXX).
+The powercontrol device translate the swip to a command that is send to the server with the devise id and tag id. The server will respond, if the user is allowed to use the media then the powercontroler turn on the powersupplie else it dosn't in both cases it gives the information to the tag detector to confirm/decline the logon to the user though it's indications lights and time that is able before a rule or time barrier sets in visa versa for logging off the system(light indications is descriped in table XXXX). It is possible for the system to let a other user to take over media divice when swiping his/her tag and the previus user is logged off and the the new logged in without turning the powersupply of. ofcouse this is only if the user i allowed on the media device. 
 
 Time- and user restriction senario:
-A user may end up using all the time whitch is given or incounter a rule that will shout off the devise. The powercontroler as communicater to the server has a regular "`Chat"' to both insure that there is a connection and for any changes to the allowed usage for the current user. To avoid that the media devise suddenly is shout down a minimum of 5 min warning is send from powercontroler to the detection devise to the user though the small speaker. 
+A user may end up using all the time whitch is given or incounter a rule that will shout off the devise. The powercontroler as communicat to the server every five minuts to get updates. This call to the sever is both to insure that there is a connection and for any changes to the allowed usage for the current user. To avoid that the media devise suddenly is shout down due to a restigtion or the user time is used up a five min warning is send from powercontroler to the detection devise to the user though the small speaker. 
 
 These two senarios is not always the reallity because of connection malfunction. 
 This "`apnormalties"' creates design quistions that will influens the user in one way or the other.   
-Lost of connection is decovered whe the user is swiping (skal det ske ved eventet eller ved regulær kontorl?) this will be displayed with the lights on the detection devise. Connection lost at a time when the user is using the media devise the light indicate this and keep the media devise turned on. The powersupply devise will still keep track af the timeusage and user restrigtions. If the user logoff the media devise then is done so and a timestamp is saved on the powersupply devise whitch is send with the timeusage til the server then the connection is reastablage. (skal der skrives her om servers restrigtioner når en bruger er låst ved et media devise der ikke er forbindelse til?) This have the advange that the user will not have to cut off the media in use if the connection is waopely. 
+Lost of connection is decovered when there is no connection at a status call that is send every five min form the powercontrol devise. With this rutine the server know that it has lost connection with the devise when it haven't resieved and massage in five miniuts. The user will see on the detector device that there is no connection. If the connection lost at a time when the user is using the media devise the light indicate this and keep the media devise turned on. The powersupply devise will still keep track af the timeusage and user restrigtions. If the user logoff the media devise then the powercontrol devise set a timestamp whitch is send to the server then the connection is reastablage. The lost connection on the server side consider it as the user has logget off within the last five miniuts. This procedure have the advange that the user will not have to cut off the media in use if the connection is waopely and the user will be able to login on other media device even with previus media divice not yet have connection. The disavenge is that the user has the possiblety to overuse the time resigtion by still use the disconnected divice until there is no more time and in the mean time has turned on at new device. The disadvange will but also have the effect to punish the user with a big negitive time to use other devices when the disconnected device is reconnected and this should discourage this senario. 
 
+\section{Demo Implemtation}
 
-
-
-  the input either to a turnon or turnoff call,    
-
-The devices functionalty is the main of the system to make users able login/off the system and control the power supplie to the entertainment system. The power control device is the communications center from the control system at the media system to the server. The power controller connects to the server though wifi and to reader device through low frequency connection. 
-
-
-\section{Detector Design}
-
-The detection device is to be placesed as easy to access and is the main communication to the user of his/hers status on the entertainment device.
-The communication is both visual and aurdiotory through three collored lights in red, yellow and green, and a small sound speaker.
+\fixme{just a try}
