update med rettelser

--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -49,7 +49,7 @@ This idea then boils down to these 3 key aspects:
 \begin{itemize}
 	\item A device to toggle the power of an electronic media
 	\item An individual key for each child that can be read by the device
-	\item A web-interface to set up rules, permissions and view/modify allowed usage of electronic media
+	\item A website to set up rules, permissions and view/modify allowed usage of electronic media
 \end{itemize} 
 
 Next follows a formal description of the problem, in the form of the problem statement followed by a more detailed explanation of how the system is designed and implemented.
